--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,20 @@
         android:id="@+id/navigation_dashboard"
         android:name="com.example.application.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_dashboard_to_testFragment"
+            app:destination="@id/testFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.application.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.example.application.ui.test.TestFragment"
+        android:label="fragment_test2"
+        tools:layout="@layout/fragment_test" />
 </navigation>
