--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Button"
-        android:textSize="28sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question" />
@@ -29,7 +29,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Button"
-        android:textSize="28sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/variant1" />
@@ -43,7 +43,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Button"
-        android:textSize="28sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/variant2" />
@@ -57,7 +57,7 @@
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Button"
-        android:textSize="28sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/variant3" />
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="404dp"
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="Далее"
@@ -106,7 +106,8 @@
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="512dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="416dp"
         android:text="TextView"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
