--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,16 @@
         android:id="@+id/navigation_home"
         android:name="com.example.application.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_dashboard2"
+            app:destination="@id/navigation_dashboard" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.application.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="@string/title_tests"
         tools:layout="@layout/fragment_dashboard" >
         <action
             android:id="@+id/action_navigation_dashboard_to_testFragment"
@@ -24,7 +28,7 @@
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.application.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_profile"
         tools:layout="@layout/fragment_notifications" >
         <action
             android:id="@+id/action_navigation_notifications_to_loginFragment"
@@ -45,7 +49,7 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.application.auth.LoginFragment"
-        android:label="fragment_login"
+        android:label="Вход/Регистрация"
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_navigation_notifications"
