--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="yellow">#FFCC00</color>
+    <color name="green">#10E530</color>
 </resources>
