--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,7 +40,7 @@
     <fragment
         android:id="@+id/testFragment"
         android:name="com.example.application.ui.test.TestFragment"
-        android:label="fragment_test2"
+        android:label="Тест"
         tools:layout="@layout/fragment_test" >
         <action
             android:id="@+id/action_testFragment_to_navigation_dashboard"
@@ -54,5 +54,8 @@
         <action
             android:id="@+id/action_loginFragment_to_navigation_notifications"
             app:destination="@id/navigation_notifications" />
+        <action
+            android:id="@+id/action_loginFragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
     </fragment>
 </navigation>
